<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.rock.werool.piensunmaize.search.SearchMenu">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <Button
        android:id="@+id/searchByStoreButton"
        style="@style/myButtonStyle"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginEnd="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginStart="32dp"
        android:background="@drawable/rounded_button"
        android:clickable="true"
        android:foreground="?attr/selectableItemBackground"
        android:text="@string/search_menu_button_by_store"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="100dp" />

    <Button
        android:id="@+id/searchByBarcodeButton"
        style="@style/myButtonStyle"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginStart="32dp"
        android:background="@drawable/rounded_button"
        android:clickable="true"
        android:foreground="?attr/selectableItemBackground"
        android:text="@string/search_menu_button_using_barcode"
        app:layout_constraintBottom_toTopOf="@+id/searchByProductNameButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/searchByProductNameButton"
        style="@style/myButtonStyle"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginEnd="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginStart="32dp"
        android:background="@drawable/rounded_button"
        android:clickable="true"
        android:foreground="?attr/selectableItemBackground"
        android:text="@string/search_menu_button_by_product"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toTopOf="@+id/searchByStoreButton" />

    <TextView
        style="@style/MyTextViewStyle"
        android:id="@+id/textViewSearch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:text="@string/search_menu_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:visibility="visible"
        android:gravity="center"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />
</android.support.constraint.ConstraintLayout>
